infra/k8s/platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    tier: platform
    environment: production

---
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure
  labels:
    name: infrastructure
    tier: platform
    environment: production

---
apiVersion: v1
kind: Namespace
metadata:
  name: graduate-project
  labels:
    name: graduate-project
    tier: application
    environment: production
